--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "framer-motion": "^10.2.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swiper": "^9.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
