--- a/package.json
+++ b/package.json
@@ -20,12 +20,19 @@
     "swiper": "^9.1.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "@typescript-eslint/eslint-plugin": "^8.34.1",
+    "@typescript-eslint/parser": "^8.34.1",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
+    "eslint": "^9.29.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.0",
     "postcss": "^8.4.21",
+    "prettier": "^3.5.3",
     "tailwindcss": "^3.2.7",
+    "typescript": "^5.8.3",
     "vite": "^4.1.0"
   }
 }
